--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 Hello
 Aman
 </br>
-<p style="color: red,bgcolor: black;">Rohan Randi</p>
+<p style="color: red; background-color: pink;">Rohan Randi</p>
+
 
